<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Settings.FMDServerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="FMDServer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDServer_Description" />

            <CheckBox
                android:id="@+id/checkBoxFMDServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="@string/Settings_FMDServer_ID" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMD_Server_ID_Desc" />

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="3mm"
                android:text="@string/NOT_AVAILABLE"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="FMDServer URL" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDServer_URL_Description" />

            <EditText
                android:id="@+id/editTextFMDServerUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="0.0.0.0" />


            <Button
                android:id="@+id/buttonRegisterOnServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDServer_Register_Button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="FMDServer Update Time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDServer_Updattime_Description" />

            <EditText
                android:id="@+id/editTextFMDServerUpdateTime"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="0" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="Location Data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDServer_LocationData_Description" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/GPS" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Cell" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>