<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.FMDConfigActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="FMD via Pin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMD_via_Pin_Description" />

            <CheckBox
                android:id="@+id/checkBoxFMDviaPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="Pin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_Pin_Description" />

            <Button
                android:id="@+id/buttonEnterPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5mm"
                android:text="@string/Settings_Enter_Pin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="fmd command" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_FMDCommand_Description" />

            <EditText
                android:id="@+id/editTextFmdCommand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="fmd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="fmd ring" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_Ringer_Tone_Description" />

            <Button
                android:id="@+id/buttonSelectRingTone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5mm"
                android:text="@string/Settings_Select_Ringtone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="fmd lock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_Lockscreenmessage_Description" />

            <EditText
                android:id="@+id/editTextTextLockScreenMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textColor="@color/colorAccent"
                android:text="fmd delete" />

            <CheckBox
                android:id="@+id/checkBoxWipeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>